feat: hypr: largely updated

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,17 +1,25 @@
+# Setup monitors
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+# Dual monitor example on G15 Strix
+# eDP-1 is the built in monitor while DP-1 is external
+# Both monitors here are at 1440 and 165Hz
+# DP-1 is on the left and  eDP-1 is on the right
+#monitor=DP-1,2560x1440@165,0x0,1
+#monitor=eDP-1,2560x1440@165,2560x0,1.25
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & /home/ucchiee/.local/bin/kitty
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# Some default env vars.
-env = XCURSOR_SIZE,24
+exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct portal is running
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Wayland magic (screen sharing etc.)
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # More wayland magic (screen sharing etc.)
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for user sudo graphical elevation
+exec-once = waybar # The top bar
+exec-once = blueman-applet # Systray app for BT
+exec-once = nm-applet --indicator # Systray app for Network/Wifi
+exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -27,35 +35,43 @@ input {
         natural_scroll = yes
     }
 
-    # keyrepeat
+    # repeat settings
     repeat_rate = 67
     repeat_delay = 225
 
-    # mouse sensitivity
-    sensitivity = 0.6 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 3
-    gaps_out = 3
+    gaps_in = 5
+    gaps_out = 10
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
-    resize_on_border = true
+}
+
+misc {
+    disable_hyprland_logo = yes
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+    
+    blur {
+        enabled = true
+        size = 7
+        passes = 4
+        new_optimizations = true
+    }
+
+    blurls = lockscreen
 
     drop_shadow = yes
     shadow_range = 4
@@ -64,16 +80,14 @@ decoration {
 }
 
 animations {
-    enabled = no
+    enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    bezier = myBezier, 0.10, 0.9, 0.1, 1.05
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 10, myBezier, slide
+    animation = windowsOut, 1, 7, myBezier, slide
     animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
@@ -97,43 +111,55 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
+device:epic mouse V1 {
     sensitivity = -0.5
 }
 
-misc {
-    # when return from sleep
-    mouse_move_enables_dpms = true
-    key_press_enables_dpms = true
-
-    focus_on_activate = true
-}
-
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+#windowrule = float, ^(kitty)$
+windowrule = float,^(pavucontrol)$
+windowrule = float,^(blueman-manager)$
+windowrule = float,^(nm-connection-editor)$
+windowrule = float,^(chromium)$
+windowrule = float,^(thunar)$
+windowrule = float, title:^(btop)$
+windowrule = float, title:^(update-sys)$
+
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# rules below would make the specific app transparent
+windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
+windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
+windowrulev2 = animation popin,class:^(thunar)$
+windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
+windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
+windowrulev2 = animation popin,class:^(chromium)$
+windowrulev2 = animation slide,class:^(wofi)$
+windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, /home/ucchiee/.local/bin/kitty
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, SPACE, exec, rofi -show run
+bind = $mainMod, Q, exec, kitty  # open the terminal
+bind = $mainMod, F4, killactive, # close the active window
+bind = $mainMod, L, exec, swaylock # Lock the screen
+bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
+bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = $mainMod, E, exec, thunar # Show the graphical file browser
+bind = $mainMod, V, togglefloating, # Allow a window to float
+bind = $mainMod, SPACE, exec, wofi # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -167,6 +193,5 @@ bind = CTRL, left, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-misc {
-    suppress_portal_warnings = true
-}
+# Source a file (multi-file configs)
+# source = ~/.config/hypr/myColors.conf
