feat: install.conf.yaml: commentted-out sway

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -58,6 +58,6 @@
     ~/.config/waybar:
         if: '[ `uname` = Linux ]'
         path: waybar
-    ~/.config/sway:
-        if: '[ `uname` = Linux ]'
-        path: sway
+    # ~/.config/sway:
+    #     if: '[ `uname` = Linux ]'
+    #     path: sway
