feat: waybar: natural scroll of sound volume

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -134,8 +134,8 @@
         "format-muted": "",
         "on-click": "pamixer -t",
         "on-click-right": "pavucontrol",
-        "on-scroll-up": "pamixer -i 5",
-        "on-scroll-down": "pamixer -d 5",
+        "on-scroll-up": "pamixer -d 5",
+        "on-scroll-down": "pamixer -i 5",
         "scroll-step": 5,
         "format-icons": {
             "headphone": "",
@@ -154,8 +154,8 @@
         "format-source-muted": "",
         "on-click": "pamixer --default-source -t",
         "on-click-right": "pavucontrol",
-        "on-scroll-up": "pamixer --default-source -i 5",
-        "on-scroll-down": "pamixer --default-source -d 5",
+        "on-scroll-up": "pamixer --default-source -d 5",
+        "on-scroll-down": "pamixer --default-source -i 5",
         "scroll-step": 5
     },
     
