--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -161,7 +161,7 @@
     
     "temperature": {
         "thermal-zone": 1,
-        "format": " {temperatureF}°F",
+        "format": " {temperatureC}°C",
         "critical-threshold": 70,
         "format-critical": " {temperatureC}°C",
         "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
