--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -49,7 +49,7 @@
         "interval": 10,
         "format": " {usage}%",
         "max-length": 10,
-        "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+        "on-click": "kitty --start-as=fullscreen --title btm sh -c 'btm'"
     },
 
     "disk": {
@@ -58,7 +58,7 @@
         "path": "/",
         "tooltip": true,
         "tooltip-format": "HDD - {used} used out of {total} on {path} ({percentage_used}%)",
-        "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+        "on-click": "kitty --start-as=fullscreen --title btm sh -c 'btm'"
     },
 
     "memory": {
@@ -67,7 +67,7 @@
         "max-length": 10,
         "tooltip": true,
         "tooltip-format": "Memory - {used:0.1f}GB used",
-        "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+        "on-click": "kitty --start-as=fullscreen --title btm sh -c 'btm'"
     },
 
     "custom/updates": {
@@ -164,6 +164,6 @@
         "format": " {temperatureC}°C",
         "critical-threshold": 70,
         "format-critical": " {temperatureC}°C",
-        "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+        "on-click": "kitty --start-as=fullscreen --title btm sh -c 'btm'"
     }
 }
