feat: hyprland.conf: added udiskie

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,6 +19,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for
 exec-once = waybar # The top bar
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
+exec-once = udiskie & # Automatic mounting
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
