--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -186,6 +186,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = ,XF86PowerOff, exec, sh -c '(wlogout --protocol layer-shell)' & disown
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = CTRL, right, workspace, e+1
 bind = CTRL, left, workspace, e-1
