tmux: updated tmux configuration

--- a/tmux/.config/tmux/tmux.general.conf
+++ b/tmux/.config/tmux/tmux.general.conf
@@ -8,7 +8,11 @@ set-option -g mouse on
 set-option -ga terminal-overrides ',screen-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',alacritty:RGB'
+set -as terminal-features ',xterm-256color:clipboard'
 # settings for undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+# set -g default-terminal "${TERM}"
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+# pass "Ptmux;" escape sequences through to the terminal
+# set-window-option -g allow-passthrough on
+set -g allow-passthrough on
