--- a/tmux/.config/tmux/tmux.keybind.conf
+++ b/tmux/.config/tmux/tmux.keybind.conf
@@ -33,4 +33,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi WheelUpPane send -X scroll-up
+bind -T copy-mode-vi WheelDownPane send -X scroll-down
 # if "which pbpaste" "bind-key p run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
